# winston

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  commands.toml  covariant.toml  notes  test_commands.toml
.github/workflows/: lint.yml  main.yml  pull_request.yml  push.yml  rust.yml  tests.yml
actions/production/: action.yml
github/actions/: fmt+tests.yml
html/: index.html.tera
src/: commands.rs  main.rs
