[package]
name = "winston"
version = "0.1.0"
authors = ["Marco Almeida <marcoafalmeida@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.8"
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[dependencies.tera]
version = "1"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve"]
